--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.0"
@@ -13,6 +14,14 @@ buildscript {
     }
 }
 
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+////        jcenter() // Warning: this repository is going to shut down soon
+//        maven { url 'https://jitpack.io' }
+//    }
+//}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
