--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.0"
 
         classpath 'com.google.gms:google-services:4.3.10'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,10 +16,8 @@ buildscript {
 
 //allprojects {
 //    repositories {
-//        google()
-//        mavenCentral()
-////        jcenter() // Warning: this repository is going to shut down soon
-//        maven { url 'https://jitpack.io' }
+////        jcenter()
+//        maven { url "https://jitpack.io" }
 //    }
 //}
 task clean(type: Delete) {
